// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Link
  className="activity-link"
  to={
    Object {
      "pathname": "/project/activity",
      "search": "?id=foo",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</Link>
`;

exports[`renders correctly 2`] = `
<Link
  className="activity-link"
  to={
    Object {
      "pathname": "/project/activity",
      "search": "?id=foo&branch=branch-6.7",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    Foo
  </span>
</Link>
`;

exports[`renders correctly 3`] = `
<Link
  className="activity-link"
  to={
    Object {
      "pathname": "/project/activity",
      "search": "?id=foo&graph=coverage",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</Link>
`;

exports[`renders correctly 4`] = `
<Link
  className="activity-link"
  to={
    Object {
      "pathname": "/project/activity",
      "search": "?id=foo&graph=custom&custom_metrics=new_bugs%2Cbugs",
    }
  }
>
  <HistoryIcon
    className="little-spacer-right"
    size={14}
  />
  <span>
    portfolio.activity_link
  </span>
</Link>
`;
